--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "^2.4.5",
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.13.0",
+    "react-addons-test-utils": "^0.14.6",
     "sass-loader": "^3.1.2",
     "script-loader": "^0.6.1",
     "style-loader": "^0.13.0",
